         </pattern>
         <filter class="org.languagetool.rules.en.EnglishPartialPosTagFilter"
                 args="no:1 regexp:in(.*) postag_regexp:JJ"/>
     This will only keep matches for words that start with 'in' and where the
     part after the 'in' is an adjective (POS tag 'JJ'). The 'no:1' is the token
     position, i.e. here the first (and only) matching <token> is referred to.

-German:
    -added and improved a few rules

-Portuguese:
    -added/improved several rules

-Spanish:
    -removed dependency on Hunspell, now uses Morfologik for spell checking
    -Reformatted rules file
    -Added more rules

-Tagalog:
    -removed dependency on Hunspell, now uses Morfologik for spell checking
    -the dash character ("-") is a delimiter now when tokenizing the text

-Russian:
    -added/improved several rules

-Ukrainian:
    -many new rules
    -rule coverage improvement
    -dictionary update (big improvements for proper nouns and vocative case)
    -some new disambiguator rules

-Rule Syntax:
    -<short>...</short> can now be added to a rulegroup to affect all the rules
     of that group

-API:
    -removed classes and methods that had been deprecated since 2.7 or longer

-Embedded server:
    -the config file options 'requestLimit' and 'requestLimitPeriodInSeconds' can
     now also be used for the HTTP server (not just for the HTTPS server)
    -new config file option 'trustXForwardForHeader': set this to 'true' if you
     run the server behind a reverse proxy and want the request limit to
     work on the original IP addresses provided by the 'X-forwarded-for' HTTP header,
     usually set by the proxy. If you run behind a proxy but don't set this
     property to true, one user can use all the requests so other users will
     also get an error message because of the request limit.
    -fix response of After the Deadline mode: <description>...</description> was
     sometimes empty, confusing the text check in WordPress