@@ -249,7 +249,7 @@ Copyright (C) 2012 Jaume Ortolà i Font
             <rule>
                 <pattern>
                     <marker>
-                        <token regexp="yes">[1234567890]+[èé]<exception postag="AO.*" postag_regexp="yes"/></token>
+                        <token regexp="yes">[1234567890]+[èé]<exception postag="AO.*" postag_regexp="yes"/><exception regexp="yes">[01234][èé]</exception></token>
                     </marker>
                 </pattern>
                 <disambig action="add"><wd pos="AO0MS0"/></disambig>
@@ -266,7 +266,7 @@ Copyright (C) 2012 Jaume Ortolà i Font
             <rule>
                 <pattern>
                     <marker>
-                        <token regexp="yes">[1234567890]+a<exception postag="AO.*" postag_regexp="yes"/></token>
+                        <token regexp="yes">[1234567890]+a<exception postag="AO.*" postag_regexp="yes"/><exception>0a</exception></token>
                     </marker>
                 </pattern>
                 <disambig action="add"><wd pos="AO0FS0"/></disambig>
@@ -283,7 +283,7 @@ Copyright (C) 2012 Jaume Ortolà i Font
             <rule>
                 <pattern>
                     <marker>
-                        <token regexp="yes">[1234567890]+ns<exception postag="AO.*" postag_regexp="yes"/></token>
+                        <token regexp="yes">[1234567890]+ns<exception postag="AO.*" postag_regexp="yes"/><exception regexp="yes">[01234]ns</exception></token>
                     </marker>
                 </pattern>
                 <disambig action="add"><wd pos="AO0MP0"/></disambig>
@@ -300,7 +300,7 @@ Copyright (C) 2012 Jaume Ortolà i Font
             <rule>
                 <pattern>
                     <marker>
-                        <token regexp="yes">[1234567890]+es<exception postag="AO.*" postag_regexp="yes"/></token>
+                        <token regexp="yes">[1234567890]+es<exception postag="AO.*" postag_regexp="yes"/><exception>0es</exception></token>
                     </marker>
                 </pattern>
                 <disambig action="add"><wd pos="AO0FP0"/></disambig>
