@@ -16,6 +16,11 @@ LanguageTool Change Log
      part after the 'in' is an adjective (POS tag 'JJ'). The 'no:1' is the token
      position, i.e. here the first (and only) matching <token> is referred to.
 
+-Catalan:
+    -updated dictionary
+    -added and improved rules
+    -fixed false alarms
+    
 -German:
     -added and improved a few rules
 
